--- a/src/components/DragArea/DragArea.module.scss
+++ b/src/components/DragArea/DragArea.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
+    margin: 0 auto;
     margin-top: 5rem;
     padding: 2rem;
-    width: 20rem;
+    width: 40rem;
     border: 1px solid green;
 }
