--- a/src/components/UserItem/UserItem.module.scss
+++ b/src/components/UserItem/UserItem.module.scss
@@ -1,7 +1,6 @@
 .wrapper {
-    border: 1px solid red;
-    max-width: 20rem;
-    height: 5rem;
+    height: 100%;
+    padding: 1rem;
     display: flex;
     justify-content: space-around;
     margin-bottom: 3rem;
