--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,12 +1,3 @@
-@import './styles/fonts';
-@import './styles/mixins';
-@import './styles/variables';
-@import "slick-carousel/slick/slick.css";
-@import "slick-carousel/slick/slick-theme.css";
-@import "./components/Reusable/MySlider/myReactSlick.css";
-@import "aos/dist/aos.css";
-
-
 /* Box sizing rules */
 *,
 *::before,
@@ -34,17 +25,14 @@ dl,
 dd {
   margin: 0;
   padding: 0;
-  font-family: $font-regular;
-  color: $jet;
 }
 
 html {
-  font-size: 62.5%; 
+  font-size: 62.5%;
 }
 /* Set default font size and family */
 body {
   font-size: 16px;
-  font-family: $font-regular;
   line-height: 1.5;
 }
 
@@ -60,7 +48,6 @@ a {
   text-decoration: none;
 }
 
-
 /* Remove border on images inside links */
 img {
   border-style: none;
@@ -73,13 +60,16 @@ img {
 // }
 
 button {
-  font-family: $font-regular;
   cursor: pointer;
 }
 
-[data-centered='yes'] {
-  width: 100%;
-  @include laptop-greater {
-    width: $sectionCenteredWidth;
-  }
+.dragStart {
+  background: red ;
+  transition: all 0.4s ease-in-out;
 }
+
+.dragOver {
+  background: lightblue;
+
+}
+
