--- a/src/components/DragArea/DragArea.module.scss
+++ b/src/components/DragArea/DragArea.module.scss
@@ -1,6 +1,11 @@
 .wrapper {
-    margin-top: 5rem;
     padding: 2rem;
     width: 40rem;
-    border: 1px solid green;
+    min-height: 70vh;
+    
+    h3 {
+        color:white;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
 }
