--- a/src/components/DragItem/DragItem.module.scss
+++ b/src/components/DragItem/DragItem.module.scss
@@ -1,6 +1,6 @@
 .dragItem {
     border-radius: 10px;
-    background-color: lightseagreen;
+    background-color: #D8CFAF;
     transition: all 0.1s ease-in-out;
 
 }
