--- a/src/globals.scss
+++ b/src/globals.scss
@@ -34,6 +34,7 @@ html {
 body {
   font-size: 16px;
   line-height: 1.5;
+  background-color: #32533D;
 }
 
 /* Remove list styles (bullets, numbering) */
@@ -64,7 +65,7 @@ button {
 }
 
 .dragStart {
-  background: red ;
+  background: #F374AE ;
 }
 
 .dragOver {
