--- a/src/components/DragItem/DragItem.module.scss
+++ b/src/components/DragItem/DragItem.module.scss
@@ -1,6 +1,5 @@
 .dragItem {
-    border-radius: 10px;
-    background-color: #D8CFAF;
-    transition: all 0.1s ease-in-out;
-
+  border-radius: 10px;
+  background-color: #d8cfaf;
+  transition: all 0.1s ease-in-out;
 }
