--- a/src/components/RemoveZone/RemoveZone.module.scss
+++ b/src/components/RemoveZone/RemoveZone.module.scss
@@ -2,18 +2,16 @@
   margin-top: 5rem;
   max-height: 70vh;
   min-height: 70vh;
+  
 
   h2 {
     text-align: center;
     margin-bottom: 3rem;
-    color:white;
-
+    color: white;
   }
-  .listWrapper {
+  .removeZoneWrapper {
     height: 100%;
-    border: 1px solid #D8CFAF;
+    border: 1px solid #d8cfaf;
     border-radius: 10px;
-    overflow-y: scroll;
-
   }
 }
