--- a/src/globals.scss
+++ b/src/globals.scss
@@ -34,7 +34,7 @@ html {
 body {
   font-size: 16px;
   line-height: 1.5;
-  background-color: #32533D;
+  background-color: #32533d;
 }
 
 /* Remove list styles (bullets, numbering) */
@@ -65,11 +65,9 @@ button {
 }
 
 .dragStart {
-  background: #F374AE ;
+  background: #f374ae;
 }
 
 .dragOver {
   background: lightblue;
-
 }
-
